tests/res/match/error_unknown_type.say
// A type test must name an in-scope type or trait.
say x = 1;
say b = x ~ is Foo; // error: 'Foo' is not a type or trait
print(b);
